// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

//
// == Kalix TCK model test for event-sourced entities ==
// see tck/src/main/scala/kalix/tck/EventSourcedEntityTCK.scala

syntax = "proto3";

package kalix.tck.model.eventsourcedentity;

option java_package = "kalix.tck.model.eventsourcedentity";
option java_multiple_files = true;

import "kalix/annotations.proto";
import "kalix/tck/model/eventsourcedentity/event_sourced_entity_api.proto";

//
// The `EventSourcedTwo` service is only for verifying forward actions and side effects.
// The `Call` method is not required to do anything, and must return an empty `Response` message.
//
service EventSourcedTwo {

  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "EventSourcedTwoEntity"
      type_id: "event-sourced-two"
      state: "Persisted"
      events: ["Persisted"]
    }
  };

  rpc Call(Request) returns (Response);
}
